--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,14 +154,6 @@ div div section {
     margin-bottom: 3%;
 }
 
-/* put the footer in the center */
-footer {
-    clear: both;
-    text-align: center;
-    margin: 20px;
-    line-height: 1.5;
-}
-
 .pbottom {
     padding-bottom: 20px;
     border-bottom: 1px solid #d8a47f;
@@ -200,6 +192,21 @@ footer {
     content: '📖';
     display: inline-block;
     margin-right: 3px;
+}
+
+/* put the footer in the center */
+footer {
+    clear: both;
+    text-align: center;
+    padding: 5px 0;
+    margin-top: 20px;
+    line-height: 1.5;
+    background-color: darkgreen;
+    color: white;
+}
+
+#enfooter {
+    font-size: 14px;
 }
 
 @media screen and (max-width:992px) {
