--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,100 +3,8 @@
 }
 
 body {
-    background-color: white;
+    background-color: rgb(222, 245, 222);
     line-height: 1.5;
-}
-
-header {
-    background-color: darkgreen;
-}
-
-/* set up the chinese title */
-h1 {
-    color: white;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 46px;
-    display: inline-block;
-    margin-bottom: 0;
-    margin-top: 3px;
-}
-
-header {
-    padding: 20px;
-}
-
-header nav {
-    float: right;
-    padding-top: 15px;
-    margin-right: 20px;
-}
-
-header nav ul {
-    list-style-type: none;
-}
-
-/* make the navigation items white and cancel the effect of hyperlinks */
-a {
-    color: white;
-    text-decoration: none;
-}
-
-/* change the color and font weight of the navbar items when hovering */
-a:hover {
-    color: lightgoldenrodyellow;
-    font-weight: 600;
-}
-
-a:active {
-    color: yellow;
-}
-
-/* make the navigation items in the same line and make them in the same line with h1*/
-header nav ul li {
-    display: inline-block;
-    margin-left: 25px;
-    margin-top: 30px;
-}
-
-/* set up the english title */
-#entitle {
-    font-size: 28px;
-    margin-top: 2px;
-    margin-left: 5px;
-}
-
-/* make the profile picture */
-.profilepic {
-    height: 700px;
-    width: 100%;
-    margin-bottom: 15px;
-    margin-right: 20px;
-    background-image: url("https://gimg2.baidu.com/image_search/src=http%3A%2F%2Fimg1001.pocoimg.cn%2Fimage%2Fpoco%2Fworks%2F60%2F2013%2F0508%2F21%2F64196990201305082158004468847054591_014_64196990.jpg&refer=http%3A%2F%2Fimg1001.pocoimg.cn&app=2002&size=f9999,10000&q=a80&n=0&g=0n&fmt=jpeg?sec=1636140659&t=0ec755fea531c74fcca3f4aff49d6d6e");
-    background-size: cover;
-    text-align: center;
-    flex: 1 1 0;
-}
-
-/* The flex container becomes flexible */
-main {
-    display: block;
-    overflow: auto;
-    padding: 1px;
-}
-
-/* The flex items are aligned to the center */
-.main {
-    margin-bottom: 20px;
-    padding: 50px;
-    background: linear-gradient(rgb(7, 190, 7), rgb(178, 240, 128));
-    border: 2px solid green;
-    border-radius: 20px;
-    clear: both;
-}
-
-.main:hover {
-    border: 3px;
-    background: linear-gradient(rgb(4, 150, 4), rgb(33, 236, 33))
 }
 
 h2 {
@@ -104,123 +12,256 @@ h2 {
     font-size: 20px;
 }
 
-#yellow h2 {
-    font-size: 30px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    margin: 20px 0;
-}
+/* header */
+    header {
+        background-color: darkgreen;
+        padding: 20px;
+    }
 
-#yellow {
-    background-color: lightyellow;
-}
+    /* set up the chinese title */
+    h1 {
+        color: white;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+        font-size: 46px;
+        display: inline-block;
+        margin-bottom: 0;
+        margin-top: 3px;
+    }
 
-main ul {
-    clear: both;
-    justify-content: end;
-}
+    /* set up the navbar */
+    header nav {
+        float: right;
+        padding-top: 15px;
+        margin-right: 20px;
+    }
 
-main p {
-    margin-top: 20px;
-}
+    header nav ul {
+        list-style-type: none;
+    }
 
-.second {
-    border: 1px solid black;
-    background-color:#b9c6ae;
-    flex: 1 1 200px;
-    width: 500px;
-    flex-wrap: wrap;
-}
+    a {
+        color: white;
+        text-decoration: none;
+    }
 
-.second img {
-    height: 200px;
-    width: 230px;
-    margin: 30px;
-    padding: auto;
-}
+    /* change the color and font weight of the navbar items when hovering */
+    a:hover {
+        color: lightgoldenrodyellow;
+        font-weight: 600;
+    }
 
-div div section {
-    text-align: center;
-}
+    a:active {
+        color: yellow;
+    }
 
-.left {
-    float: left;
-    margin-left: 12%;
-    justify-content: space-evenly;
-}
+    /* make the navigation items in the same line and make them in the same line with h1*/
+    header nav ul li {
+        display: inline-block;
+        margin-left: 25px;
+        margin-top: 30px;
+    }
 
-.right {
-    float: right;
-    margin-right: 12%;
-    margin-bottom: 3%;
-}
+    /* set up the english title */
+    #englishtitle {
+        font-size: 28px;
+        margin-top: 2px;
+        margin-left: 5px;
+    }
 
-.pbottom {
-    padding-bottom: 20px;
-    border-bottom: 1px solid #d8a47f;
-}
 
-/* add forms and files */
-.forms a {
-    color: blue;
-    text-decoration: underline;
-}
 
-.forms a::before {
-    content: '📝';
-    display: inline-block;
-    margin-right: 3px;
-}
+/* the home page */
+    /* set up the profile picture */
+    .profilepic {
+        height: 700px;
+        width: 100%;
+        margin-bottom: 15px;
+        margin-right: 20px;
+        background-image: url("https://gimg2.baidu.com/image_search/src=http%3A%2F%2Fimg1001.pocoimg.cn%2Fimage%2Fpoco%2Fworks%2F60%2F2013%2F0508%2F21%2F64196990201305082158004468847054591_014_64196990.jpg&refer=http%3A%2F%2Fimg1001.pocoimg.cn&app=2002&size=f9999,10000&q=a80&n=0&g=0n&fmt=jpeg?sec=1636140659&t=0ec755fea531c74fcca3f4aff49d6d6e");
+        background-size: cover;
+        text-align: center;
+        flex: 1 1 0;
+    }
 
-.resourceicon a {
-    color: blue;
-    text-decoration: underline;
-}
+    /* The flex container becomes flexible */
+    main {
+        display: block;
+        overflow: auto;
+        margin: 3%;
+    }
 
-.forms h2 {
-    font-size: 30px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    margin: 20px 0;
-}
+    /* The flex items are aligned to the center */
+    .main {
+        margin-bottom: 20px;
+        padding: 20px 50px 50px 50px;
+        background: linear-gradient(rgb(7, 190, 7), rgb(178, 240, 128));
+        border: 2px solid green;
+        border-radius: 20px;
+        clear: both;
+    }
 
-.forms h2::before {
-    content: '🏗️';
-    display: inline-block;
-    margin-right: 5px;
-}
+    .main:hover {
+        border: 3px;
+        background: linear-gradient(rgb(4, 150, 4), rgb(33, 236, 33))
+    }
 
-.resourceicon h2 {
-    font-size: 30px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    margin: 20px 0;
-}
 
-.resourceicon h2::before {
-    content: '💡';
-    display: inline-block;
-    margin-right: 5px;
-}
 
-.resourceicon a::before {
-    content: '📖';
-    display: inline-block;
-    margin-right: 3px;
-}
+/* the about page */
+    #green h2 {
+        font-size: 30px;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+        margin: 20px 0;
+    }
+
+    #green {
+        background-color: rgb(222, 245, 222);
+        height: 100%;
+        margin: 0 20px;
+    }
+
+/* the contact page */
+    .contact #contacth {
+        color: black;
+        font-size: 30px;
+        margin-bottom: 20px;
+    }
+
+    .contact p {
+        margin-bottom: 20px;
+    }
+
+    textarea {
+        width: 300px;
+        margin: 10px 40px;
+        opacity: 50%;
+    }
+
+    #contactbody {
+        width: 70%;
+        height: 200px;
+    }
+
+    button {
+        margin: 10px 40px;
+    }
+
+
+
+/* the services page */
+    .second {
+        border: 1px solid black;
+        background-color:#b9c6ae;
+        flex: 1 1 200px;
+        width: 500px;
+        flex-wrap: wrap;
+    }
+
+    .second img {
+        height: 200px;
+        width: 230px;
+        margin: 30px;
+        padding: auto;
+    }
+
+    div div section {
+        text-align: center;
+    }
+
+    .left {
+        float: left;
+        margin-left: 12%;
+        justify-content: space-evenly;
+    }
+
+    .right {
+        float: right;
+        margin-right: 12%;
+        margin-bottom: 3%;
+    }
+
+    .pbottom {
+        padding-bottom: 20px;
+        border-bottom: 1px solid #d8a47f;
+    }
+
+
+
+/* the resources page */
+    .forms a {
+        color: blue;
+        text-decoration: underline;
+    }
+
+    .forms a::before {
+        content: '📝';
+        display: inline-block;
+        margin-right: 3px;
+    }
+
+    .resourceicon a {
+        color: blue;
+        text-decoration: underline;
+    }
+
+    .forms h2 {
+        font-size: 30px;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+        margin: 20px 0;
+    }
+
+    .forms h2::before {
+        content: '🏗️';
+        display: inline-block;
+        margin-right: 5px;
+    }
+
+    .resourceicon h2 {
+        font-size: 30px;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+        margin: 20px 0;
+    }
+
+    .resourceicon h2::before {
+        content: '💡';
+        display: inline-block;
+        margin-right: 5px;
+    }
+
+    .resourceicon a::before {
+        content: '📖';
+        display: inline-block;
+        margin-right: 3px;
+    }
+
+    .forms p {
+        margin-left: 20px;
+    }
+
+    .resourceicon p {
+        margin-left: 20px;
+    }
+
+
 
 /* put the footer in the center */
-footer {
-    clear: both;
-    text-align: center;
-    padding: 5px 0;
-    margin-top: 20px;
-    line-height: 1.5;
-    background-color: darkgreen;
-    color: white;
-}
+    footer {
+        clear: both;
+        text-align: center;
+        padding: 5px 0;
+        margin-top: 20px;
+        line-height: 1.5;
+        background-color: darkgreen;
+        color: white;
+    }
 
-#enfooter {
-    font-size: 14px;
-}
+    #enfooter {
+        font-size: 14px;
+    }
 
+
+
+/* more mobile responsive */
 @media screen and (max-width:992px) {
     nav {
         display: none;
