--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,15 +109,33 @@ h2 {
 
 /* the about page */
     #green h2 {
+        text-align: center;
         font-size: 30px;
         font-family: Georgia, 'Times New Roman', Times, serif;
-        margin: 20px 0;
+        margin: 20px 0 10px 0;
     }
 
     #green {
         background-color: rgb(222, 245, 222);
         height: 100%;
         margin: 0 20px;
+        line-height: 1.8;
+    }
+
+    #directory {
+        background-image: url("../images/about-directory.jpg");
+        background-repeat: no-repeat;
+        background-size: contain;
+        width: 50%;
+        height: 600px;
+        display: flex;        
+        justify-content: center;
+    }
+
+    #directoryContainer {
+        display: flex;        
+        justify-content: center;
+        overflow: auto;
     }
 
 /* the contact page */
@@ -220,12 +238,6 @@ h2 {
         margin-right: 12%;
         margin-bottom: 3%;
     }
-
-    .pbottom {
-        padding-bottom: 20px;
-        border-bottom: 1px solid #d8a47f;
-    }
-
 
 
 /* the resources page */
