--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,455 +113,458 @@ header nav ul li {
 }
 
 /* the home page */
-    /* set up the profile picture */
-    .profilepic {
-        height: 700px;
-        width: 100%;
-        margin-bottom: 15px;
-        margin-right: 20px;
-        background-image: url("https://img2.baidu.com/it/u=4055858773,4200476737&fm=26&fmt=auto");
-        background-size: cover;
-        text-align: center;
-        flex: 1 1 0;
-    }
-
-    /* The flex container becomes flexible */
-    main {
-        display: block;
-        overflow: auto;
-        margin: 3%;
-    }
-
-    /* The flex items are aligned to the center */
-    .main {
-        margin-bottom: 20px;
-        padding: 20px 50px 50px 50px;
-        background: linear-gradient(rgb(7, 190, 7), rgb(178, 240, 128));
-        border: 2px solid green;
-        border-radius: 20px;
-        clear: both;
-    }
-
-    .main h2 {
-        font-family: Georgia, 'Times New Roman', Times, serif;
-        font-size: 26px;
-    }    
-
-    .main:hover {
-        border: 3px;
-        background: linear-gradient(rgb(4, 150, 4), rgb(33, 236, 33))
-    }
-
-    #news p {
-        color: blue;
-        text-decoration: underline;
-    }
-
-    #resources p {
-        color: blue;
-        text-decoration: underline;
-    }
-
-/* the about page */
-    #green h2 {
-        text-align: center;
-        font-size: 30px;
-        font-family: Georgia, 'Times New Roman', Times, serif;
-        margin: 20px 0 10px 0;
-    }
-
-    #green {
-        background-color: rgb(222, 245, 222);
-        height: 100%;
-        margin: 0 20px;
-        line-height: 1.8;
-    }
-
-    #certificate {
-        background-image: url("../images/营业执照.jpg");
-        background-repeat: no-repeat;
-        background-size: contain;
-        width: 80%;
-        height: 900px;
-        display: flex;
-        justify-content: center;
-    }
-
-    #certificateContainer {
-        display: flex;        
-        justify-content: center;
-        overflow: auto;
-    }
-
-/* the contact page */
-    form #contacth {
-        color: black;
-        font-size: 30px;
-        margin: 20px;
-    }
-
-    form p {
-        margin-bottom: 20px;
-        margin-left: 20px;
-    }
-
-    label {
-        margin-left: 20px;
-    }
-
-    input {
-        width: 300px;
-        margin: 10px 40px;
-        opacity: 50%;
-    }
-
-    input:focus {
-        box-shadow: 0 0 5px grey;
-    }
-
-    select {
-        -moz-appearance: none;
-        -webkit-appearance: none;
-        appearance: none;
-        background-image: url("../images/arrow.png");
-        background-repeat: no-repeat;
-        background-position: right;
-        background-size: contain;
-        margin-left: 13px;
-        border-color: grey;
-        color: grey;
-        width: 300px;
-    }
-
-    select:hover, button:hover {
-        box-shadow: 0 0 5px grey;
-    }
-
-    #name {
-        margin-left: 26px;
-    }
-
-    #email {
-        margin-left: 31px;
-    }
-
-    #subject {
-        margin-left: 15px;
-    }
-
-    #message {
-        width: 70%;
-        height: 200px;
-        padding: 0;
-        margin: 4px;
-    }
-
-    button {
-        margin: 10px 20px;
-    }
-
-
-
-/* the services page */
-    .second {
-        border: 1px solid black;
-        background-color:#b9c6ae;
-        flex: 1 1 200px;
-        width: 500px;
-        flex-wrap: wrap;
-    }
-
-    .second img {
-        height: 200px;
-        width: 230px;
-        margin: 30px;
-        padding: auto;
-    }
-
-    div div section {
-        text-align: center;
-    }
-
-    .showcase .left {
-        float: left;
-        margin-left: 12%;
-        justify-content: space-evenly;
-    }
-
-    .showcase .right {
-        float: right;
-        margin-right: 12%;
-        margin-bottom: 3%;
-    }
-
-
-/* the resources page */
-    .forms a {
-        color: blue;
-        text-decoration: underline;
-    }
-
-    .forms a::before {
-        content: '📝';
-        display: inline-block;
-        margin-right: 3px;
-    }
-
-    .resourceicon a {
-        color: blue;
-        text-decoration: underline;
-    }
-
-    .forms h2 {
-        font-size: 30px;
-        font-family: Georgia, 'Times New Roman', Times, serif;
-        margin: 20px 0;
-    }
-
-    .forms h2::before {
-        content: '🏗️';
-        display: inline-block;
-        margin-right: 5px;
-    }
-
-    .resourceicon h2 {
-        font-size: 30px;
-        font-family: Georgia, 'Times New Roman', Times, serif;
-        margin: 20px 0;
-    }
-
-    .resourceicon h2::before {
-        content: '';
-        display: inline-block;
-        margin-right: 20px;
-    }
-
-    .resourceicon a::before {
-        content: '📖';
-        display: inline-block;
-        margin-right: 3px;
-    }
-
-    .forms p {
-        margin-left: 20px;
-    }
-
-    .resourceicon p {
-        margin-left: 20px;
-    }
-
-/* setting the footer */
-    .showcase {
-        height: 80vh;
-    }
-    
-    #resourceContainer {
-        height: 80vh;
-    }
-
-    #newsContainer {
-        height: 80vh;
-    }
-
-    #contactForm {
-        height: 80vh;
-    }
-
-    .containerInFooter {
-        display: flex;
-        flex-wrap: wrap-reverse;
-        flex-direction: column;
-    }
-
-    #footer {
-        font-size: 14px;
-        clear: both;
-        width: 100%;
-        height: 120px;
-        padding: 5px 0;
-        line-height: 1.5;
-        background-color: darkgreen;
-        color: white;
-        font-family: Georgia, 'Times New Roman', Times, serif;
-        display: flex;
-        flex-wrap: wrap-reverse;
-        flex-direction: column;
-    }
-
-    #footername {
-        margin-top: 28px;
-    }
-
-    #enfooter {
-        font-size: 12px;
-    }
-
-    #footer .left {
-        float: left;
-        margin-left: 6%;
-    }
-
-    #footer .right {
-        float: right;
-        margin-right: 6%;
-    }
-
-/* more mobile responsive */
-@media screen and (max-width: 768px) {
-#englishTitle {
-    font-size: 19px;
-}
-
-/* the services page */
-.showcase {
-    height: 140vh;
-}
-
-.showcase .left {
-    float: left;
-    margin-left: 17%;
-}
-
-.showcase .right {
-    float: right;
-    margin-right: 17%;
-}
-
-@media screen and (max-width: 540px) {
-/* 414px for iphone 6/7/8 plus, 540px for surface duo, 768px for ipad */
-/* header of all pages */
-header {
-    padding: none;
+/* set up the profile picture */
+.profilepic {
+    height: 700px;
+    width: 100%;
+    margin-bottom: 15px;
+    margin-right: 20px;
+    background-image: url("https://img2.baidu.com/it/u=4055858773,4200476737&fm=26&fmt=auto");
+    background-size: cover;
     text-align: center;
+    flex: 1 1 0;
 }
 
-nav {
-    display: none;
-}
-
-.dropdownbtn {
+/* The flex container becomes flexible */
+main {
     display: block;
-    font-size: 18px;
-    height: 20px;
+    overflow: auto;
+    margin: 3%;
+}
+
+/* The flex items are aligned to the center */
+.main {
+    margin-bottom: 20px;
+    padding: 20px 50px 50px 50px;
+    background: linear-gradient(rgb(7, 190, 7), rgb(178, 240, 128));
+    border: 2px solid green;
+    border-radius: 20px;
+    clear: both;
+}
+
+.main h2 {
     font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 26px;
+}    
+
+.main:hover {
+    border: 3px;
+    background: linear-gradient(rgb(4, 150, 4), rgb(33, 236, 33))
 }
 
-.dropdown-content {
-    min-width: 200px;
+#news p {
+    color: blue;
+    text-decoration: underline;
 }
 
-.dropdown-content a {
-    font-size: 16px;
-    padding: 5px 16px;
-}
-
-.left {
-    text-align: center;
-    margin: auto;
-}
-
-.right {
-    text-align: center;
-    margin: auto;
-    float: left;
-}
-
-#chineseTitle {
-    font-size: 22px;
-}
-
-#englishTitle {
-    font-size: 18px;
-}
-
-/* the home page */
-.main p {
-    font-size: 15px;
+#resources p {
+    color: blue;
+    text-decoration: underline;
 }
 
 /* the about page */
-#green p {
-    font-size: 18px;
+#green h2 {
+    text-align: center;
+    font-size: 30px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    margin: 20px 0 10px 0;
 }
 
-#green h2 {
-    font-size: 22px;
+#green {
+    background-color: rgb(222, 245, 222);
+    height: 100%;
+    margin: 0 20px;
+    line-height: 1.8;
 }
 
 #certificate {
+    background-image: url("../images/营业执照.jpg");
+    background-repeat: no-repeat;
     background-size: contain;
-    width: 100%;
-    height: 300px;
+    width: 80%;
+    height: 900px;
+    display: flex;
+    justify-content: center;
 }
 
-/* the services page needs to modify */
-/* .showcase .left {
-    margin-left: 3rem;
-}
-
-.showcase .right {
-    margin-right: 3rem;
-} */
-
-.second {
-    width: 320px;
-}
-
-/* the news and resources page */
-.forms h2 {
-    font-size: 22px;
-}
-
-.resourceicon h2 {
-    font-size: 22px;
+#certificateContainer {
+    display: flex;        
+    justify-content: center;
+    overflow: auto;
 }
 
 /* the contact page */
 form #contacth {
-    font-size: 20px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: black;
+    font-size: 30px;
+    margin: 20px;
+}
+
+form p {
+    margin-bottom: 20px;
+    margin-left: 20px;
+}
+
+label {
+    margin-left: 20px;
 }
 
 input {
-    margin: 10px 0;
-    opacity: 1;
+    width: 300px;
+    margin: 10px 40px;
+    opacity: 50%;
+}
+
+input:focus {
+    box-shadow: 0 0 5px grey;
 }
 
 select {
-    margin-left: 30px;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
+    background-image: url("../images/arrow.png");
+    background-repeat: no-repeat;
+    background-position: right;
+    background-size: contain;
+    margin-left: 13px;
+    border-color: grey;
+    color: grey;
+    width: 300px;
 }
 
-#email {
-    margin-left: 28px;
+select:hover, button:hover {
+    box-shadow: 0 0 5px grey;
 }
 
 #name {
     margin-left: 26px;
 }
 
+#email {
+    margin-left: 31px;
+}
+
 #subject {
-    margin-left: 30px;
+    margin-left: 15px;
 }
 
 #message {
-    width: 85%;
-    margin: 30px;
+    width: 70%;
+    height: 200px;
+    padding: 0;
+    margin: 4px;
 }
 
-/* button {
+button {
     margin: 10px 20px;
-} */
+}
 
-/* footer */
-#footer {
-    height: 11rem;
+#contactSubmitted {
+    height: 80vh;
+}
+
+/* the services page */
+.second {
+    border: 1px solid black;
+    background-color:#b9c6ae;
+    flex: 1 1 200px;
+    width: 500px;
+    flex-wrap: wrap;
+}
+
+.second img {
+    height: 200px;
+    width: 230px;
+    margin: 30px;
+    padding: auto;
+}
+
+div div section {
+    text-align: center;
+}
+
+.showcase .left {
+    float: left;
+    margin-left: 12%;
+    justify-content: space-evenly;
+}
+
+.showcase .right {
+    float: right;
+    margin-right: 12%;
+    margin-bottom: 3%;
+}
+
+
+/* the resources page */
+.forms a {
+    color: blue;
+    text-decoration: underline;
+}
+
+.forms a::before {
+    content: '📝';
+    display: inline-block;
+    margin-right: 3px;
+}
+
+.resourceicon a {
+    color: blue;
+    text-decoration: underline;
+}
+
+.forms h2 {
+    font-size: 30px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    margin: 20px 0;
+}
+
+.forms h2::before {
+    content: '🏗️';
+    display: inline-block;
+    margin-right: 5px;
+}
+
+.resourceicon h2 {
+    font-size: 30px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    margin: 20px 0;
+}
+
+.resourceicon h2::before {
+    content: '';
+    display: inline-block;
+    margin-right: 20px;
+}
+
+.resourceicon a::before {
+    content: '📖';
+    display: inline-block;
+    margin-right: 3px;
+}
+
+.forms p {
+    margin-left: 20px;
+}
+
+.resourceicon p {
+    margin-left: 20px;
+}
+
+/* setting the footer */
+.showcase {
+    height: 80vh;
+}
+
+#resourceContainer {
+    height: 80vh;
+}
+
+#newsContainer {
+    height: 80vh;
+}
+
+#contactForm {
+    height: 80vh;
 }
 
 .containerInFooter {
-    font-size: 18px;
+    display: flex;
+    flex-wrap: wrap-reverse;
+    flex-direction: column;
+}
+
+#footer {
+    font-size: 14px;
+    clear: both;
+    width: 100%;
+    height: 120px;
+    padding: 5px 0;
+    line-height: 1.5;
+    background-color: darkgreen;
+    color: white;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    display: flex;
+    flex-wrap: wrap-reverse;
+    flex-direction: column;
 }
 
 #footername {
-    display: none;
+    margin-top: 28px;
 }
+
+#enfooter {
+    font-size: 12px;
+}
+
+#footer .left {
+    float: left;
+    margin-left: 6%;
+}
+
+#footer .right {
+    float: right;
+    margin-right: 6%;
+}
+
+/* more mobile responsive */
+@media screen and (max-width: 768px) {
+    #englishTitle {
+        font-size: 19px;
+    }
+
+    /* the services page */
+    .showcase {
+        height: 140vh;
+    }
+
+    .showcase .left {
+        float: left;
+        margin-left: 17%;
+    }
+
+    .showcase .right {
+        float: right;
+        margin-right: 17%;
+    }
+}
+
+@media screen and (max-width: 540px) {
+/* 414px for iphone 6/7/8 plus, 540px for surface duo, 768px for ipad */
+/* header of all pages */
+    header {
+        padding: none;
+        text-align: center;
+    }
+
+    nav {
+        display: none;
+    }
+
+    .dropdownbtn {
+        display: block;
+        font-size: 18px;
+        height: 20px;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+    }
+
+    .dropdown-content {
+        min-width: 200px;
+    }
+
+    .dropdown-content a {
+        font-size: 16px;
+        padding: 5px 16px;
+    }
+
+    .left {
+        text-align: center;
+        margin: auto;
+    }
+
+    .right {
+        text-align: center;
+        margin: auto;
+        float: left;
+    }
+
+    #chineseTitle {
+        font-size: 22px;
+    }
+
+    #englishTitle {
+        font-size: 18px;
+    }
+
+    /* the home page */
+    .main p {
+        font-size: 15px;
+    }
+
+    /* the about page */
+    #green p {
+        font-size: 18px;
+    }
+
+    #green h2 {
+        font-size: 22px;
+    }
+
+    #certificate {
+        background-size: contain;
+        width: 100%;
+        height: 300px;
+    }
+
+    /* the services page needs to modify */
+    /* .showcase .left {
+        margin-left: 3rem;
+    }
+
+    .showcase .right {
+        margin-right: 3rem;
+    } */
+
+    .second {
+        width: 320px;
+    }
+
+    /* the news and resources page */
+    .forms h2 {
+        font-size: 22px;
+    }
+
+    .resourceicon h2 {
+        font-size: 22px;
+    }
+
+    /* the contact page */
+    form #contacth {
+        font-size: 20px;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+    }
+
+    input {
+        margin: 10px 0;
+        opacity: 1;
+    }
+
+    select {
+        margin-left: 30px;
+    }
+
+    #email {
+        margin-left: 28px;
+    }
+
+    #name {
+        margin-left: 26px;
+    }
+
+    #subject {
+        margin-left: 30px;
+    }
+
+    #message {
+        width: 85%;
+        margin: 30px;
+    }
+
+    /* button {
+        margin: 10px 20px;
+    } */
+
+    /* footer */
+    #footer {
+        height: 11rem;
+    }
+
+    .containerInFooter {
+        font-size: 18px;
+    }
+
+    #footername {
+        display: none;
+    }
 }
