updated background image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,7 +119,7 @@ header nav ul li {
     width: 100%;
     margin-bottom: 15px;
     margin-right: 20px;
-    background-image: url("https://i2.wp.com/pixahive.com/wp-content/uploads/2020/10/Hacking-And-Cyber-Security-129294-pixahive.jpg?fit=1560%2C873&ssl=1");
+    background-image: url("https://infocert.digital/wp-content/uploads/sites/11/2020/10/Cybersecurity.png");
     background-size: cover;
     text-align: center;
     flex: 1 1 0;
